# PathTracer

./: CMakeLists.txt  README.md
src/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.cpp  Bounds3.hpp  CMakeLists.txt  EFloat.h  Intersection.cpp  Intersection.hpp  Light.cpp  Matrix4.cpp  Matrix4.h  PLY_Loader.cpp  PLY_Loader.h  Quaternion.cpp  Quaternion.h  Ray.hpp  Sphere.cpp  Sphere.hpp  Threads.cpp  Threads.h  TkConfigure.h  TkHash.h  TkLoader.cpp  TkLoader.h  TkMath.cpp  TkMath.h  TkPrerequisites.h  TkRenderer.cpp  TkRenderer.h  TkSPPM.cpp  TkSPPM.h  TkViewer.cpp  TkViewer.h  Triangle.cpp  Triangle.hpp  Vector.hpp  main.cpp  rply.cpp  rply.h  (+4 more)
src/core/: Light.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shape.h  TkFilm.cpp  TkFilm.h  TkFilter.cpp  TkFilter.h  TkLowdiscrepancy.cpp  TkLowdiscrepancy.h  TkRayTracer.cpp  TkRayTracer.h  TkSpectrum.cpp  TkSpectrum.h  camera.cpp  camera.h  sampler.cpp  sampler.h  sampling.cpp  sampling.h
src/tracer/: Photonmap.cpp  Photonmap.h  TkBdptTracer.cpp  TkBdptTracer.h  TkLightTracer.cpp  TkLightTracer.h  TkPathTracer.cpp  TkPathTracer.h  TkSppmTracer.cpp  TkSppmTracer.h  neighbor.cpp  neighbor.h  quickselect.h
